--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 style="background-color: aquamarine;">Hello Vedant dagade</h1>
 </body>
 </html>
